<resources>
    <string name="app_name">Guardian App</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Emergency</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_history">My History</string>
    <string name="menu_find_me">Find Me</string>
    <string name="sign_out">Sign Out</string>
    <string name="icon_sign_out">icon sign out</string>
    <string name="photo_profile">photo profile</string>
    <string name="press">Press</string>
    <string name="to_record">to record</string>
    <string name="record_now">record now</string>
    <string name="recording">Recording</string>
    <string name="standby_mode">Standby mode</string>
    <string name="take_picture">Take Picture</string>
    <string name="captured">Captured</string>
    <string name="or">or</string>
    <string name="setting_basic">Basic</string>
    <string name="setting_account">Account</string>
    <string name="setting_advanced">Advanced</string>
    <string name="setting_dark_mode">Dark Mode</string>
    <string name="setting_language">Language</string>
    <string name="setting_help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="setting_help_and_support">Help and Support></string>
    <string name="setting_about_us">About Us</string>
    <string name="setting_application">Application</string>
    <string name="english">English</string>
    <string name="emergency_data">Emergency Data</string>
    <string name="registered_contacts">Registered Contacts</string>
    <string name="sos_message">SOS Message</string>
    <string name="send_location">Send Location</string>
    <string name="help_me">Help Me!, I am in Danger… Hurry Up!</string>
    <string name="save_settings">Save Settings</string>
    <string name="close_navigation_drawer">close navigation drawer</string>
    <string name="welcome_to">Welcome to</string>
    <string name="guardian">Guardian!</string>
    <string name="email">Email</string>
    <string name="email_ex">example@gmail.com</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="invalid_password">Password must be more than 8 characters</string>
    <string name="invalid_email">Enter email correctly!</string>
    <string name="required">Required!</string>
    <string name="hello">Hello!</string>
    <string name="sign_up_to">Sign up to</string>
    <string name="get_started">get started.</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="id_phone">+62</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="acc_created">Yayyy!, Account Created!</string>
    <string name="save">Save Edit</string>
    <string name="edit_photo_profile">change photo profile</string>
    <string name="no_audio_recorded">Oppsss…\nNo History Founds!</string>
    <string name="no_contact">Oppsss…\nNo Contact Founds!</string>
    <string name="play_audio">play audio</string>
    <string name="the_same_experience_as">The same experience as being guarded by a bodyguard</string>
    <string name="get_started2">Get Started</string>
    <string name="delete_audio">delete audio</string>
    <string name="are_you_sure_want_to_delete">Are you sure want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="warning">warning</string>
    <string name="success_">Success!!</string>
    <string name="file_has_been_deleted">File has been Deleted</string>
    <string name="close_dialog">close dialog</string>
    <string name="camera_permission_not_granted">Camera permission is not granted by the user</string>
    <string name="failed_open_camera">Failed to open camera</string>
    <string name="acc_exists">Sorry, Account Already Exists</string>
    <string name="field_regis_empty">Name, Email, Password, or Phone cannot be Empty!</string>
    <string name="field_login_empty">Email or Password cannot be empty!</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="press_to_capture_image">press to capture image</string>
  <string name="available_soon">Available soon!</string>
  <string name="violence">Violence</string>
    <string name="not_violence">Not Violence</string>
    <string name="not_granted">Not getting Permission</string>
    <string name="your_name">Your Name</string>
    <string name="your_email">Your Email</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="onboarding_image">Onboarding Image</string>
    <string name="delete">Delete</string>
    <string name="contact_deleted">Contact has been deleted!</string>
    <string name="contact_delete_failed">Contact Failed to delete!</string>
    <string name="add_contact">Add Contact</string>
    <string name="savedialog">Save</string>
    <string name="cancel">Cancel</string>
    <string name="contact_added">Contact has been added</string>
    <string name="failed_add_contact">Contact failed to add</string>
    <string name="fill_first_msg">Please fill in the message first</string>
    <string name="msg_saved">Message Saved</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="share_location">Share Location</string>
    <string name="location_sending_success">Location Sucessfully sending!</string>
</resources>