<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@+id/nav_home">

  <fragment
    android:id="@+id/nav_home"
    android:name="com.guardian.guardianapp.ui.home.HomeFragment"
    android:label="@string/menu_home"
    tools:layout="@layout/fragment_home" >
    <action
        android:id="@+id/action_nav_home_to_nav_history"
        app:destination="@id/nav_history" />
  </fragment>

  <fragment
    android:id="@+id/nav_settings"
    android:name="com.guardian.guardianapp.ui.settings.SettingsFragment"
    android:label="@string/menu_settings"
    tools:layout="@layout/fragment_settings" />

  <fragment
    android:id="@+id/nav_history"
    android:name="com.guardian.guardianapp.ui.history.HistoryFragment"
    android:label="@string/menu_history"
    tools:layout="@layout/fragment_history" >
    <action
        android:id="@+id/action_nav_history_to_nav_home"
        app:destination="@id/nav_home" />
  </fragment>
</navigation>