<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:background="@color/black">

  <View
    android:id="@+id/view3"
    android:layout_width="wrap_content"
    android:layout_height="249dp"
    android:background="@drawable/bg_alert"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/view" />

  <View
    android:id="@+id/view"
    android:layout_width="wrap_content"
    android:layout_height="108dp"
    android:background="@drawable/bg_alert_warning"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:contentDescription="@string/warning"
    android:src="@drawable/ic_warning"
    app:layout_constraintBottom_toBottomOf="@+id/view"
    app:layout_constraintEnd_toEndOf="@+id/view"
    app:layout_constraintStart_toStartOf="@+id/view"
    app:layout_constraintTop_toTopOf="@+id/view3" />

  <TextView
    android:id="@+id/textView13"
    style="@style/RegularTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="25dp"
    android:text="@string/are_you_sure_want_to_delete"
    android:textSize="14sp"
    app:layout_constraintEnd_toEndOf="@+id/view3"
    app:layout_constraintStart_toStartOf="@+id/view3"
    app:layout_constraintTop_toBottomOf="@+id/view" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/btn_no"
    style="@style/customButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="29dp"
    android:background="@drawable/ic_switch_button_off"
    android:fontFamily="@font/poppins_bold"
    android:insetBottom="0dp"
    android:padding="0dp"
    android:text="@string/no"
    android:textSize="20sp"
    app:layout_constraintStart_toStartOf="@+id/textView13"
    app:layout_constraintTop_toBottomOf="@+id/textView13" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/btn_yes"
    style="@style/customButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_switch_button_on"
    android:fontFamily="@font/poppins_bold"
    android:insetBottom="0dp"
    android:padding="0dp"
    android:text="@string/yes"
    android:textSize="20sp"
    app:layout_constraintEnd_toEndOf="@+id/textView13"
    app:layout_constraintTop_toTopOf="@+id/btn_no" />

</androidx.constraintlayout.widget.ConstraintLayout>