<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="@dimen/nav_header_height"
  android:gravity="bottom"
  android:orientation="vertical"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:theme="@style/ThemeOverlay.AppCompat.Dark">

  <ImageButton
    android:id="@+id/btn_close"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="8dp"
    android:background="?attr/selectableItemBackground"
    android:contentDescription="@string/close_navigation_drawer"
    android:src="@drawable/ic_close"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent" />


  <androidx.cardview.widget.CardView
    android:id="@+id/view2"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_gravity="center"
    android:layout_marginTop="16dp"
    android:elevation="12dp"
    android:innerRadius="0dp"
    android:shape="ring"
    android:thicknessRatio="1.9"
    app:cardCornerRadius="50dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/btn_close">

    <ImageView
      android:id="@+id/user_picture"
      android:layout_width="match_parent"
      android:layout_height="100dp"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:contentDescription="@string/photo_profile"
      app:srcCompat="@mipmap/ic_launcher_round">

    </ImageView>
  </androidx.cardview.widget.CardView>


  <TextView
    android:id="@+id/username"
    style="@style/SemiBoldTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="8dp"
    android:paddingTop="@dimen/nav_header_vertical_spacing"
    android:text="@string/nav_header_title"
    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
    android:textSize="24sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/view2" />

</androidx.constraintlayout.widget.ConstraintLayout>